<resources>
    <string name="app_name">Chatsy</string>
    <string name="ImsciencesPeshawar">IMSciences, Peshawar</string>
    <string name="login">Login</string>
    <string name="edit_text_hint_login">Enter Phone Number</string>
    <string name="otp_button">Send OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="otp_code">Enter OTP code</string>
    <string name="resend_otp_code">Resend here</string>
    <string name="resend_code_text">Haven\'t received code?</string>
    <string name="send_verification_text">We sent a verification code to </string>
    <string name="welcome_text">Welcome to </string>
    <string name="username_text">Enter Username</string>
    <string name="search_username">Username</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="setting_fragment">Setting fragment</string>
    <string name="group_fragment">Group Fragment</string>
    <string name="search_user_name">Search Users</string>
    <string name="search">Search</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user">user</string>
    <string name="send_message">Send Message</string>
    <string name="last_message">Last Message</string>
    <string name="last_message_time">1:00 pm</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="back">BACK</string>
</resources>