<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="100"
    android:padding="20dp"
    tools:context=".OtpConfirmationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:src="@drawable/lock_icon"
        app:tint="@color/primary_color">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="100"
        android:layout_weight="20"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/primary_color"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:text="@string/verification_code">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:text="@string/send_verification_text">

        </TextView>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_code"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:elevation="5dp"
        android:maxLength="6"
        android:background="@drawable/edit_text_round_rectangle"
        android:padding="10dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/dark_grey"
            android:text="@string/resend_code_text">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color"
            android:text="@string/resend_otp_code">

        </TextView>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textStyle="normal"
        android:text="@string/verify">

    </Button>

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="15">

    </ProgressBar>
    
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >

   </TextView>

</LinearLayout>