<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="100"
    android:layout_margin="0dp"
    android:padding="20dp"
    tools:context=".LoginScreenActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:fontFamily="monospace"
        android:gravity="center|top"
        android:text="@string/login"
        android:textColor="@color/teal_dark"
        android:textSize="50sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="15"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            android:id="@+id/country_code_picker">


        </com.hbb20.CountryCodePicker>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_hint_login"
            android:layout_marginHorizontal="7dp"
            android:inputType="phone"
            android:background="@drawable/edit_text_round_rectangle"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:id="@+id/edit_text_phone_number">
        </EditText>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginHorizontal="3dp"
        android:textAllCaps="true"
        android:text="@string/otp_button"
        android:id="@+id/send_otp_button">

    </Button>

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:id="@+id/login_progress_bar">

    </ProgressBar>

</LinearLayout>